[tool.poetry]
name = "graphcast"
version = "0.1.0"
description = ""
authors = ["fujioka-a"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"


[tool.poetry.group.dev.dependencies]
setuptools = "^75.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
